fix(audio) update openapi endpoints
